Reverts Java 15 features from a backport to 2.x (#1121)
* Reverts Java 15 features

2.x branch compiles Java 11 code thus any features subsequent of this version will have issues

Signed-off-by: Brian Flores <iflorbri@amazon.com>